--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 		</thead>
 		<tbody>
 			<tr id="row1">
-				<th>Waist</th>
+				<td class="left">Waist</td>
 				<td>25</td>
 				<td>28</td>
 				<td>30</td>
@@ -32,7 +32,7 @@
 				<td>32</td>
 			</tr>
 			<tr id="row2">
-				<th>Chest</th>
+				<td class="left">Chest</td>
 				<td>34</td>
 				<td>34</td>
 				<td>38</td>
@@ -40,7 +40,7 @@
 				<td>41</td>
 			</tr>
 			<tr id="row3">
-				<th>Sleeve</th>
+				<td class="left">Sleeve</td>
 				<td>23</td>
 				<td>24</td>
 				<td>24</td>
